--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,7 @@
           <h3 class="contact-heading uppercase text-center">Get in touch</h3>
           <h5 class="uppercase text-center">Let´s work together</h5>
 
-          <form id="contact_form" class="center-form" action="https://formsubmit.co/salomelamprecht@outlook.com" method="POST">
+          <form id="contact_form" class="center-form" action="http://formspree.io/salomelamprecht@outlook.com" method="POST">
             <input class="form-control" type="text" name="name" placeholder="Name" required>
             <input class="form-control" type="email" name="email" placeholder="Email" required>
             <textarea rows="5" name="message" class="form-control" placeholder="Message" required></textarea>
