--- a/contact.html
+++ b/contact.html
@@ -23,11 +23,11 @@
     />
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 
-    <script
+    <!--<script
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"
     ></script>
-  </head>
+  </head>-->
 
   <body>
     <header>
