--- a/contact.html
+++ b/contact.html
@@ -26,8 +26,8 @@
     <!--<script
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"
-    ></script>
-  </head>-->
+    ></script> -->
+  </head>
 
   <body>
     <header>
