Corrected spelling mistakes

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                   <h4 class="three-reasons-heading uppercase">What I do</h4>
                   <p>
                     I am an experienced manager adept at implementing and
-                    working across mutliple different software solutions. I help
+                    working across multiple different software solutions. I help
                     domiciliary care agencies with their digital rostering and
                     care management solutions. I can also help with other
                     aspects of data management.
@@ -219,7 +219,7 @@
                 <div class="col-10">
                   <h4 class="three-reasons-heading uppercase">Why hire me</h4>
                   <p>
-                    I'm solutions orientated. i work with you to undertand the
+                    I'm solutions orientated. I work with you to understand the
                     problem before preparing the best solution to resolve it.
                   </p>
                 </div>
