--- a/interests.html
+++ b/interests.html
@@ -243,7 +243,7 @@
             />
             <div class="card-body">
               <p class="card-text">
-                Raystede rescue, rehome and provide sanctuary to more than 2000
+                Raystede rescue, re-home and provide sanctuary to more than 2000
                 animals each year.
               </p>
               <a
