--- a/resume.html
+++ b/resume.html
@@ -287,7 +287,7 @@
 								</button>
 							</h2>
 							<div id="flush-collapseEight" class="accordion-collapse collapse" aria-labelledby="flush-headingEight" data-bs-parent="#accordionFlushExample">
-								<div class="accordion-body">Determination and perseverence to see tasks through to the end.  Commitment to company objectives.  Apply feedback and embrace professional development.</div>
+								<div class="accordion-body">Determination and perseverance to see tasks through to the end.  Commitment to company objectives.  Apply feedback and embrace professional development.</div>
 							</div>
 						</div>
 						<div class="accordion-item">
