--- a/resume.html
+++ b/resume.html
@@ -114,7 +114,7 @@
           <div class="history-items">
             <div class="timeline-item" data-dates="08/2023 - current">
               <h4>Self Employed</h4>
-              <p>Freelance Consultant</p>
+              <p>Freelance Contractor</p>
             </div>
             <div class="timeline-item" data-dates="04/2023 - 08/2023">
               <h4>Birdie Care Services Ltd</h4>
