--- a/resume.html
+++ b/resume.html
@@ -120,13 +120,9 @@
               <h4>Birdie Care Services Ltd</h4>
               <p>Implementation Manager</p>
             </div>
-            <div class="timeline-item" data-dates="10/2021 - 03/2023">
-              <h4>Trinity Homecare Group</h4>
+            <div class="timeline-item" data-dates="08/2005 - 03/2023">
+              <h4>Berkeley Home Health Ltd / Trinity Homecare Group</h4>
               <p>Operations Systems Manager</p>
-            </div>
-            <div class="timeline-item" data-dates="08/2005 - 10/2021">
-              <h4>Berkeley Home Health Group Ltd</h4>
-              <p>Quality and Compliance & Systems Manager</p>
             </div>
             <div class="timeline-item" data-dates="03/2019 - 08/2019">
               <h4>Learning People Global</h4>
