Updated CV and Resume for MHC & Enara

--- a/resume.html
+++ b/resume.html
@@ -133,7 +133,7 @@
               <p>Consultant</p>
             </div>
             <div class="timeline-item" data-dates="09/2003 - 08/2014">
-              <h4>MiHomecare Ltd</h4>
+              <h4>Enara Group Ltd / MiHomecare Ltd</h4>
               <p>Quality and Performance Manager</p>
             </div>
 						<div class="timeline-item" data-dates="2007 - 2008">
