Resume Update removed Ltd

--- a/resume.html
+++ b/resume.html
@@ -121,7 +121,7 @@
               <p>Implementation Manager</p>
             </div>
             <div class="timeline-item" data-dates="08/2005 - 03/2023">
-              <h4>Berkeley Home Health Ltd / Trinity Homecare Group</h4>
+              <h4>Berkeley Home Health Group / Trinity Homecare Group</h4>
               <p>Operations Systems Manager</p>
             </div>
             <div class="timeline-item" data-dates="03/2019 - 08/2019">
@@ -133,7 +133,7 @@
               <p>Consultant</p>
             </div>
             <div class="timeline-item" data-dates="09/2003 - 08/2014">
-              <h4>Enara Group Ltd / MiHomecare Ltd</h4>
+              <h4>Enara Group / MiHomecare</h4>
               <p>Quality and Performance Manager</p>
             </div>
 						<div class="timeline-item" data-dates="2007 - 2008">
