Changes made to resume and index to show most recent experience.

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     working across multiple different software solutions. I help
                     domiciliary care agencies with their digital rostering and
                     care management solutions. I can also help with other
-                    aspects of data management.
+                    aspects of data management, migration and documentation.
                   </p>
                 </div>
               </div>
@@ -205,6 +205,33 @@
                 </div>
               </div>
             </div>
+                 <!-- Systems Skills -->
+          <div id="three-reasons-paragraph"
+          class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+              <div class="row">
+                <div class="col-2">
+                  <i class="three-reasons-icon fas fa-layer-group" aria-hidden="true"></i>
+                </div>
+                <div class="col-10">
+                  <h4 class="three-reasons-heading uppercase">Systems</h4>
+                  <p>
+                    I am skilled in a multitude of software solutions for client and employee management. 
+                    These are some of the recent systems I have used and implemented:</p>
+                  <ul style="column-count:2">
+                    <li>Birdie</li>
+                    <li>Google Looker</li>
+                    <li>Access People Planner</li>
+                    <li>Access Care Planning</li>
+                    <li>Access Care Compliance</li>
+                    <li>Care Line Live</li>
+                    <li>StaffPlan</li>
+                    <li>Alto</li>
+                    <li>SugarCRM</li>
+                    <li>Basic SQL, JavaScript, HTML & CSS</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
             <div
               id="three-reasons-paragraph"
               class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6"
@@ -225,6 +252,7 @@
                 </div>
               </div>
             </div>
+          </div>
           </div>
         </div>
       </div>
