--- a/interests.html
+++ b/interests.html
@@ -110,7 +110,7 @@
       <div class="row">
         <div class="col-12 interest-coloumn text-center">
           <h3 class="interest-heading uppercase">Charity Events</h3>
-          <h4 class="interest-heading">I enjoy taking part in charity events whenever possible.</h4>
+          <h4 class="interest-heading">I enjoy taking part in charity events whenever possible.  I play in the Seaford Womens Cricket team, go paddle boarding and kayaking when the weather allows.  I also have a motorbike that I like to go out on every now and again.</h4>
         </div>
 
         <div
