Updated Looker to Resume & CSS hvr styling

--- a/resume.html
+++ b/resume.html
@@ -151,6 +151,22 @@
               <h4>Google</h4>
               <p>Google Data Analytics Professional Certificate</p>
             </div>
+            <div class="timeline-item" data-dates="2023">
+              <h4>Google Looker Developer</h4>
+              <a
+                    href="https://www.udemy.com/certificate/UC-8a27fda8-8caa-4750-a7c0-c86a07ec246e/"
+                    target="_blank"
+                    style="text-decoration:none; color: white"
+                    ><span><p class="paragraph-hvr">Complete Guide to Google Looker - Look ML Developer</h4></span></a>
+            </div>
+            <div class="timeline-item" data-dates="2023">
+              <h4>Google Looker User & Analyst</h4>
+              <a
+                    href="https://www.udemy.com/certificate/UC-5ae0951f-efac-4624-806e-0a0e999a5253/"
+                    target="_blank"
+                    style="text-decoration:none; color: white"
+                    ><span><p class="paragraph-hvr">Complete Guide to Google Looker - User and Analyst</h4></span></a>
+            </div>
             <div class="timeline-item" data-dates="09/2005 - 06/2006">
               <h4>University of Sussex</h4>
               <p>MA Human Rights</p>
