Add links and hover to systems used

--- a/index.html
+++ b/index.html
@@ -218,16 +218,52 @@
                     I am skilled in a multitude of software solutions for client and employee management. 
                     These are some of the recent systems I have used and implemented:</p>
                   <ul style="column-count:2">
-                    <li>Birdie</li>
-                    <li>Google Looker</li>
-                    <li>Access People Planner</li>
-                    <li>Access Care Planning</li>
-                    <li>Access Care Compliance</li>
-                    <li>Care Line Live</li>
-                    <li>StaffPlan</li>
-                    <li>Alto</li>
-                    <li>SugarCRM</li>
-                    <li>Basic SQL, JavaScript, HTML & CSS</li>
+                    <a
+                    href="https://www.birdie.care/"
+                    target="_blank"
+                    style="text-decoration:none; color: black"
+                    ><span><li class="paragraph-hvr">Birdie</li></span></a>
+                    <a
+                    href="https://cloud.google.com/looker?hl=en"
+                    target="_blank"
+                    style="text-decoration:none; color: black"
+                    ><span><li class="paragraph-hvr">Google Looker</li></span></a>
+                    <a
+                    href="https://www.theaccessgroup.com/en-gb/campaigns/hsc/peopleplanner/"
+                    target="_blank"
+                    style="text-decoration:none; color: black"
+                    ><span><li class="paragraph-hvr">Access People Planner</li></span></a>
+                    <a
+                    href="https://www.theaccessgroup.com/en-gb/health-social-care/care-management-software/care-planning/"
+                    target="_blank"
+                    style="text-decoration:none; color: black"
+                    ><span><li class="paragraph-hvr">Access Care Planning</li></span></a>
+                    <a
+                    href="https://www.theaccessgroup.com/en-gb/health-social-care/care-management-software/care-compliance/"
+                    target="_blank"
+                    style="text-decoration:none; color: black"
+                    ><span><li class="paragraph-hvr">Access Care Compliance</li></span></a>
+                    <a
+                    href="https://carelinelive.com/"
+                    target="_blank"
+                    style="text-decoration:none; color: black"
+                    ><span><li class="paragraph-hvr">Care Line Live</li></span></a>
+                    <a
+                    href="https://www.oneadvanced.com/products/staffplan/"
+                    target="_blank"
+                    style="text-decoration:none; color: black"
+                    ><span><li class="paragraph-hvr">One Advanced StaffPlan</li></span></a>
+                    <a
+                    href="https://www.altosoftware.co.uk/"
+                    target="_blank"
+                    style="text-decoration:none; color: black"
+                    ><span><li class="paragraph-hvr">Vebra Alto Estate Agency Software</li></span></a>
+                    <a
+                    href="https://www.sugarcrm.com/uk/"
+                    target="_blank"
+                    style="text-decoration:none; color: black"
+                    ><span><li class="paragraph-hvr">Sugar CRM</li></span></a>
+                    <li>SQL, JavaScript, HTML & CSS</li>
                   </ul>
                 </div>
               </div>
