Updated title tags and added sitemap

--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 </head>
 <body>
-    <h1>Hmm.. Looks like you've gone off the beaten path. </h1>
+    <h1>Hmm.. Looks like we've run into a bit of a complication... </h1>
     <h3>Don't worry. Salome is looking into it. Click on the image to head back home.</h3>
     <a href="index.html">
         <img id="error-image" src="assets/images/raystede2020.jpg" alt="salome-404">
