Uddate meta descriptions across all pages

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Expert consultant for systems implementation, management and custom reports and dashboards, across various industries including health and social care. Providing comprehensive business consultancy solutions to meet your needs."/>
+    <meta name="keywords" content="Systems, HTML, CSS, JavaScript, Implementation, Google Looker, Quality Improvement, CQC, Access People Planner, Access Care Planning, Birdie Care, Rates Increases, Care Management, Rostering"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Data Analysis & Systems Implementation Consultant</title>
     <link
