--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Contact us today to upgrade your business with custom reports, dashboards and systems implementation support and guidance."/>
+    <meta name="keywords" content="Systems, HTML, CSS, JavaScript, Implementation, Google Looker, Quality Improvement, CQC, Access People Planner, Access Care Planning, Birdie Care, Rates Increases, Care Management, Rostering"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Data Analysis & Systems Implementation Consultant Contact</title>
     <link
