--- a/interests.html
+++ b/interests.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="description" content="Expert consultant for systems implementation and management across various industries including health and social care."/>
+    <meta name="keywords" content="Systems, HTML, CSS, JavaScript, Implementation, Google Looker, Quality Improvement, CQC, Access People Planner, Access Care Planning, Birdie Care, Rates Increases, Care Management, Rostering"/>
     <title>Salome Lamprecht Data Analysis & Systems Implementation Consultant</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
