--- a/reviews.html
+++ b/reviews.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="description" content="Testimonials reflecting quality consultancy for all your business needs."/>
+    <meta name="keywords" content="Systems, HTML, CSS, JavaScript, Implementation, Google Looker, Quality Improvement, CQC, Access People Planner, Access Care Planning, Birdie Care, Rates Increases, Care Management, Rostering"/>
     <title>Data Analysis & Systems Implementation Consultant Reviews</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link
