--- a/resume.html
+++ b/resume.html
@@ -103,7 +103,7 @@
       </div>
     </header>
 		
-    <section class="container-fluid">
+    <section class="container-fluid desktop-display">
       <div class="row">
         <div class="col-md-4 bg-color-work-history section-column">
           <div class="row">
@@ -178,13 +178,14 @@
           </div>
         </div>
         <div class="col-md-8 bg-color-three-reasons section-column">
-          <div class="row">
-            <div class="col">
-              <h3 class="section-heading uppercase">My skills</h3>
-            </div>
-          </div>
+          
 
 <!-- Leadership Skills -->
+        <div class="row">
+          <div class="col">
+            <h3 class="section-heading uppercase">My skills</h3>
+          </div>
+        </div>
 					<div class="row">
             <div class="col-10">
               <div class="row">
@@ -315,6 +316,274 @@
 							</div>
 						</div>
 					</div>
+
+<!-- Web Development Skills -->
+<!-- <div class="row">
+            <div class="col-10">
+              <div class="row">
+                <div class="col-2">
+                  <i class="three-reasons-icon fas fa-code" aria-hidden="true"></i>
+                </div>
+                <div class="col-10">
+                  <h4 class="three-reasons-heading uppercase">Web Development</h4>
+                  <p>
+                    I am completing a Diploma in Full Stack Web Development with Code Institute which I am hoping to complete by August 2021.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div> 
+
+          <div class="row progress-section">
+						<div class="col">
+								<div class="progress">
+										<div class="progress-bar bg-success" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:95%;">
+												<span class="sr-only">95% complete</span>
+										</div>
+										<span class="progress-type"><i class="fab fa-html5" aria-hidden="true"></i> HTML5</span>
+								</div>
+								<div class="progress">
+										<div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:85%;">
+												<span class="sr-only">85% complete</span>
+										</div>
+										<span class="progress-type"><i class="fab fa-css3-alt" aria-hidden="true"></i> CSS3 / Bootstrap</span>
+								</div>
+								<div class="progress">
+										<div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
+												<span class="sr-only">80% complete</span>
+										</div>
+										<span class="progress-type"><i class="fab fa-js-square" aria-hidden="true"></i> JavaScript / jQuery</span>
+								</div>
+								<div class="progress">
+										<div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:20%;">
+												<span class="sr-only">20% complete</span>
+										</div>
+										<span class="progress-type"><i class="fab fa-python" aria-hidden="true"></i> Python / Django</span>
+								</div>
+								<div class="progress">
+										<div class="progress-bar bg-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:10%;">
+												<span class="sr-only">10% complete</span>
+										</div>
+										<span class="progress-type"><i class="fas fa-database" aria-hidden="true"></i> MongoDB</span>
+								</div>
+						</div>
+					</div>
+      </div> -->
+      
+    </section>
+
+    <section class="container-fluid mobile-display">
+<!-- Leadership Skills -->
+        <div class="col-md-8 bg-color-three-reasons section-column">
+          <div class="row">
+            <div class="col">
+              <h3 class="section-heading uppercase">My skills</h3>
+            </div>
+          </div>
+					<div class="row">
+            <div class="col-10">
+              <div class="row">
+                <div class="col-2">
+                  <i class="three-reasons-icon fas fa-users" aria-hidden="true"></i>
+                </div>
+
+                <div id="three-reasons-paragraph" class="col-10">
+                  <h4 class="three-reasons-heading uppercase">Leadership</h4>
+                  <p>
+                    I am a passionate and experienced manager with over eleven years of prior experience across a range of different 
+                    fields including operations, quality & compliance, finance and payroll. 
+                    I possess impeccable communication and relationship-building skills, am confident leading a dynamic team, 
+                    and have a proven track record in successful implementation of systems to tight deadlines. 
+                  </p>
+                  <p>I am meticulously organised, able to balance a demanding workload, and adapt seamlessly to new 
+                    environments and roles. An excellent listener, proficient at providing bespoke support to suit 
+                    the individual’s needs, taking a proactive approach to problem-solving and project management. 
+                  </p>
+                  <p>I am a conscientious colleague who values transparency and reliability, striving for continual 
+                    professional development at every opportunity. Embraces challenges with enthusiasm and positivity, 
+                    formulating appropriate solutions to problems effectively and swiftly.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+					<div class="accordion accordion-flush" id="accordionFlushExample">
+						<div class="accordion-item">
+							<h2 class="accordion-header" id="flush-headingOne">
+								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+									Communication
+								</button>
+							</h2>
+							<div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+								<div class="accordion-body">Ability to communicate clearly and concisely both verbally and in writing. Effective use of active listening, expression and non-verbal communication. Ability to simplify complex data.</div>
+							</div>
+						</div>
+						<div class="accordion-item">
+							<h2 class="accordion-header" id="flush-headingTwo">
+								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+									Motivation
+								</button>
+							</h2>
+							<div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+								<div class="accordion-body">Ability to inspire teams and colleagues whilst building self esteem and confidence. Inspire autonomy through mentoring and recognition of achievements. Understanding of employee differences and skillsets to maximise productivity.</div>
+							</div>
+						</div>
+						<div class="accordion-item">
+							<h2 class="accordion-header" id="flush-headingThree">
+								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+									Delegation
+								</button>
+							</h2>
+							<div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+								<div class="accordion-body">Ability to assess employee strengths and weaknesses and assign relevant tasks.  Setting and defining expectations and measuring outcomes.  Evaluation of employee performance and offering training as required.</div>
+							</div>
+						</div>
+						<div class="accordion-item">
+							<h2 class="accordion-header" id="flush-headingFour">
+								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+									Positivity
+								</button>
+							</h2>
+							<div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
+								<div class="accordion-body">Empathetic, caring and friendly attitude.  Ability to manage conflict in a diplomatic manner.  Quick integration into teams.</div>
+							</div>
+						</div>
+						<div class="accordion-item">
+							<h2 class="accordion-header" id="flush-headingFive">
+								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
+									Trustworthiness
+								</button>
+							</h2>
+							<div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive" data-bs-parent="#accordionFlushExample">
+								<div class="accordion-body">Open, honest and reliable.  Acting with integrity in all areas of life, standing up for what is right.  Accountable for actions.</div>
+							</div>
+						</div>
+						<div class="accordion-item">
+							<h2 class="accordion-header" id="flush-headingSix">
+								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSix" aria-expanded="false" aria-controls="flush-collapseSix">
+									Creativity
+								</button>
+							</h2>
+							<div id="flush-collapseSix" class="accordion-collapse collapse" aria-labelledby="flush-headingSix" data-bs-parent="#accordionFlushExample">
+								<div class="accordion-body">Open-minded and curious.  Ability to analyse problems and find solutions.</div>
+							</div>
+						</div>
+						<div class="accordion-item">
+							<h2 class="accordion-header" id="flush-headingSeven">
+								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSeven" aria-expanded="false" aria-controls="flush-collapseSeven">
+									Responsibility
+								</button>
+							</h2>
+							<div id="flush-collapseSeven" class="accordion-collapse collapse" aria-labelledby="flush-headingSeven" data-bs-parent="#accordionFlushExample">
+								<div class="accordion-body">Responsible for failures and successes of myself and my team.  Ability to acknowledge mistakes and rectify them.  Open to feedback.</div>
+							</div>
+						</div>
+						<div class="accordion-item">
+							<h2 class="accordion-header" id="flush-headingEight">
+								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseEight" aria-expanded="false" aria-controls="flush-collapseEight">
+									Commitment
+								</button>
+							</h2>
+							<div id="flush-collapseEight" class="accordion-collapse collapse" aria-labelledby="flush-headingEight" data-bs-parent="#accordionFlushExample">
+								<div class="accordion-body">Determination and perseverance to see tasks through to the end.  Commitment to company objectives.  Apply feedback and embrace professional development.</div>
+							</div>
+						</div>
+						<div class="accordion-item">
+							<h2 class="accordion-header" id="flush-headingNine">
+								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseNine" aria-expanded="false" aria-controls="flush-collapseNine">
+									Flexibility
+								</button>
+							</h2>
+							<div id="flush-collapseNine" class="accordion-collapse collapse" aria-labelledby="flush-headingNine" data-bs-parent="#accordionFlushExample">
+								<div class="accordion-body">Flexibility to last minute operational changes.  Ability to learn new skills quickly and adapt to changing environments.</div>
+							</div>
+						</div>
+						<div class="accordion-item">
+							<h2 class="accordion-header" id="flush-headingTen">
+								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTen" aria-expanded="false" aria-controls="flush-collapseTen">
+								  Feedback
+								</button>
+							</h2>
+							<div id="flush-collapseTen" class="accordion-collapse collapse" aria-labelledby="flush-headingTen" data-bs-parent="#accordionFlushExample">
+								<div class="accordion-body">Ability to clearly define objectives and expectations.  Provide frequent feedback and listen to employee responses.  Mentor and positively reinforce confidence in employees.</div>
+							</div>
+						</div>
+					</div>
+          <div class="row">
+            <div class="col-md-4 bg-color-work-history section-column">
+              <div class="row">
+                <div class="col-12">
+                  <h3 class="history-heading uppercase">Work History</h3>
+                </div>
+              </div>
+              <div class="history-items">
+                <div class="timeline-item" data-dates="08/2023 - current">
+                  <h4>Self Employed</h4>
+                  <p>Freelance Contractor</p>
+                </div>
+                <div class="timeline-item" data-dates="04/2023 - 08/2023">
+                  <h4>Birdie Care Services Ltd</h4>
+                  <p>Implementation Manager</p>
+                </div>
+                <div class="timeline-item" data-dates="08/2005 - 03/2023">
+                  <h4>Berkeley Home Health Group / Trinity Homecare Group</h4>
+                  <p>Operations Systems Manager</p>
+                </div>
+                <div class="timeline-item" data-dates="03/2019 - 08/2019">
+                  <h4>Learning People Global</h4>
+                  <p>Quality and Compliance Manager</p>
+                </div>
+                <div class="timeline-item" data-dates="01/2016 - 04/2017">
+                  <h4>Care Quality Solutions</h4>
+                  <p>Consultant</p>
+                </div>
+                <div class="timeline-item" data-dates="09/2003 - 08/2014">
+                  <h4>Enara Group / MiHomecare</h4>
+                  <p>Quality and Performance Manager</p>
+                </div>
+                <div class="timeline-item" data-dates="2007 - 2008">
+                  <h4>Breytenbachs Solicitors</h4>
+                  <p>Legal Assistant</p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-12">
+                  <h3 class="history-heading uppercase">Education/Learning</h3>
+                </div>
+              </div>
+              <div class="history-items">
+                <div class="timeline-item" data-dates="2023 - current">
+                  <h4>Google</h4>
+                  <p>Google Data Analytics Professional Certificate</p>
+                </div>
+                <div class="timeline-item" data-dates="2023">
+                  <h4>Google Looker Developer</h4>
+                  <a
+                        href="https://www.udemy.com/certificate/UC-8a27fda8-8caa-4750-a7c0-c86a07ec246e/"
+                        target="_blank"
+                        style="text-decoration:none; color: white"
+                        ><span><p class="paragraph-hvr">Complete Guide to Google Looker - Look ML Developer</h4></span></a>
+                </div>
+                <div class="timeline-item" data-dates="2023">
+                  <h4>Google Looker User & Analyst</h4>
+                  <a
+                        href="https://www.udemy.com/certificate/UC-5ae0951f-efac-4624-806e-0a0e999a5253/"
+                        target="_blank"
+                        style="text-decoration:none; color: white"
+                        ><span><p class="paragraph-hvr">Complete Guide to Google Looker - User and Analyst</h4></span></a>
+                </div>
+                <div class="timeline-item" data-dates="09/2005 - 06/2006">
+                  <h4>University of Sussex</h4>
+                  <p>MA Human Rights</p>
+                </div>
+                <div class="timeline-item" data-dates="09/2001 - 06/2005">
+                  <h4>University of Sussex</h4>
+                  <p>BA Law with English and American Studies</p>
+                </div>
+              </div>
+            </div>
+
 
 <!-- Web Development Skills -->
 <!-- <div class="row">
