Update contact form with autocomplete attributes

--- a/contact.html
+++ b/contact.html
@@ -116,8 +116,8 @@
           <h5 class="uppercase text-center">Let´s work together</h5>
 
           <form id="contact_form" class="center-form" action="https://formsubmit.co/salomelamprecht@outlook.com" method="POST">
-            <input class="form-control" type="text" name="name" placeholder="Name" required>
-            <input class="form-control" type="email" name="email" placeholder="Email" required>
+            <input class="form-control" type="text" name="name" placeholder="Name" autocomplete="name" required>
+            <input class="form-control" type="email" name="email" placeholder="Email" autocomplete="email" required>
             <textarea rows="5" name="message" class="form-control" placeholder="Message" required></textarea>
             <input type="hidden" name="_next" value="https://salomelamprecht.github.io/Web-CV/thankyou.html">
             <input type="hidden" name="_subject" value="New submission!">
