Update what I can help with

--- a/index.html
+++ b/index.html
@@ -176,10 +176,11 @@
                   <h4 class="three-reasons-heading uppercase">What I do</h4>
                   <p>
                     I am an experienced manager adept at implementing and
-                    working across multiple different software solutions. I help
-                    domiciliary care agencies with their digital rostering and
+                    working across multiple different software solutions. I help organisations
+                    with software implementations, system management, data validation, migration, 
+                    documentation.  I also help health & social care agencies with their digital rostering and
                     care management solutions. I can also help with other
-                    aspects of data management, migration and documentation.
+                    aspects of data management, custom reports and dashboards.
                   </p>
                 </div>
               </div>
