Update added web design into footer

--- a/index.html
+++ b/index.html
@@ -410,6 +410,7 @@
 					</ul>
 				</div>
 			</div>
+			<div class="container text-center">&#169; 2024 Salome Lamprecht | Web Design by Salome Lamprecht</div>
 		</footer>
 	</body>
 </html>
