--- a/thankyou.html
+++ b/thankyou.html
@@ -206,6 +206,7 @@
 					</ul>
 				</div>
 			</div>
+			<div class="container text-center">&#169; 2024 Salome Lamprecht | Web Design by Salome Lamprecht</div>
 		</footer>
 		<script
 			src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
