Update index skills and reviews

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 										style="text-decoration: none; color: black"
 										><span><li class="paragraph-hvr">Sugar CRM</li></span></a
 									>
-									<li>SQL, JavaScript, HTML & CSS</li>
+									<li>Understanding of SQL, JavaScript, HTML & CSS</li>
 								</ul>
 							</div>
 						</div>
