--- a/reviews.html
+++ b/reviews.html
@@ -225,6 +225,50 @@
 									</p>
 								</div>
 							</div>
+
+							<div class="row">
+								<div class="col-2">
+									<i
+										class="three-reasons-icon fa sharp fa solid fa-chevron-right"
+										aria-hidden="true"
+									></i>
+								</div>
+								<div class="col-10">
+									<a
+										href="https://hartewellhomecare.co.uk/"
+										target="_blank"
+										style="text-decoration: none; color: black"
+										><span
+											><h4 class="three-reasons-heading uppercase heading-hvr">
+												Hartewell Homecare Limited
+											</h4></span
+										></a
+									>
+									<h5>Systems Implementation & Administration</h5>
+									<p class="text-justify">
+										"I have worked with Salome since 2021, she has been a wealth
+										of knowledge and support to me and my teams. Salome has been
+										an integral part of the business when implementing new
+										systems ensuring that a detailed implementation plan is
+										written and followed when transitioning from current to new
+										operating systems. Salome attention to detail and
+										configuration of new systems has enabled a smooth transition
+										when migrating data into new platforms.
+										<br />
+										Salome has mentored, trained staff in the workings mutable
+										platforms including, Staff plan, access care compliance,
+										people planner, power BI.
+										<br />
+										Most recently Salome has supported me with the starting a
+										new business in the health and social care sector, this has
+										included writing polices and procedures, setting up new
+										systems and platforms.
+										<br />
+										Salome continues to support me and the business and is an
+										asset to us. " - Sasha Lunn, Operations Director
+									</p>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -268,7 +312,9 @@
 					</ul>
 				</div>
 			</div>
-			<div class="container text-center">&#169; 2024 Salome Lamprecht | Web Design by Salome Lamprecht</div>
+			<div class="container text-center">
+				&#169; 2024 Salome Lamprecht | Web Design by Salome Lamprecht
+			</div>
 		</footer>
 		<script
 			src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
